--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,35 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+    defaultConfig {
+        multiDexEnabled true
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.google.android.gms:play-services-auth:11.4.0'
+    compile 'pub.devrel:easypermissions:0.3.0'
+    compile('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.apis:google-api-services-sheets:v4-rev498-1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.gdata:core:1.47.1') {
+        exclude group: 'com.google.guava', module: 'guava'
+    }
+    compile 'com.google.apis:google-api-services-oauth2:v2-rev109-1.21.0'
+    implementation project(':gdata-spreadsheet-1.0')
+    implementation project(':bcprov-jdk16-1.45')
 }
